--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Brahmnoor Singh Chawla</title>
+    <title>Brahmnoor Chawla</title>
     <!-- Required CSS -->
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -12,9 +12,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="canonical" href="http://brahmnoor.me/"/>
-    <meta name="description" content="Hey there, I'm Brahmnoor! I'm currently a year 2 student, studying computer science engineering at the University of Hong Kong. I'm interested in machine learning and web development, and have done quite a few projects in them.">
+    <meta name="description" content="Hey there, I'm Brahmnoor! I'm currently a junior, studying computer science at the Drexel University. I love solving hard engineering problems, and my interests lie in infrastructure, algorithms, backend systems and statistical analysis.">
     <meta property="og:type" content="profile">
-    <meta property="og:title" content="Brahmnoor Singh Chawla">
+    <meta property="og:title" content="Brahmnoor Chawla">
     <meta property="og:url" content="http://brahmnoor.me/">
     <meta property="og:image" content="https://brahmnoor.me/img/preview.png">
     <meta property="profile:first_name" content="Brahmnoor Singh">
@@ -36,11 +36,11 @@
     <header class="home">
       <div class="overlay">
         <h2>Hi there! I am </h2>
-        <h1>Brahmnoor S. Chawla</h1>
+        <h1>Brahmnoor Chawla</h1>
         <h2>I am a <span class="typed"></span></h2>
         <div class="buttons">
           <a class="top-button" href="resume.pdf">Resume</a>
-          <a class="top-button" href="mailto:brahm@connect.hku.hk" style="margin-left: 20px;">Contact</a>
+          <a class="top-button" href="mailto:bchawla@princeton.edu" style="margin-left: 20px;">Contact</a>
         </div>
         <h5>(Scroll down to learn more)</h5>
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -54,10 +54,10 @@
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
           <p>
-            I am currently a second-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List. I will be travelling to <a href="http://princeton.edu" target="_blank">Princeton University</a> during the spring of 2019 on exchange, where I'll be taking advanced courses in computer science.
+            I am currently a junior studying Computer Science at <a href="https://www.drexel.edu/" target="_blank">Drexel University</a>, where I am part of the Honors Program under the Pennoni Honors College. This summer, I was doing a <strong>Software Engineering Internship at Google</strong> - I was working on an internal tool in YouTube Ads, that improved engineering productivity by upto 91%. In Spring 2019, I was in <a href="http://princeton.edu" target="_blank">Princeton University</a> on exchange, where I took advanced courses in computer science.
           </p>
           <p>
-            Since high school, I have a deep interest in solving complex problems using computer algorithms. I've represented The University of Hong Kong regionally in Association for Computing Machinery's ICPC competitive programming competitions. I also enjoy teaching this stuff, and that's why I'm currently a teaching assistant for Computer Programming in Python, and Everyday Computing & Internet (at HKU).
+            Since high school, I have a deep interest in solving complex problems using computer algorithms. In 2019, I transferred from The University of Hong Kong to Drexel University. In the past, I've represented The University of Hong Kong regionally in Association for Computing Machinery's ICPC competitive programming competitions. I also enjoy teaching this stuff, and that's why I'm was a teaching assistant for Computer Programming in Python, and Everyday Computing & Internet (at HKU).
           </p>
           <p>
             Other than this, I have a keen interest in software development, and I have worked on Javascript (Node, Vue, Angular and Express) and Python as a research assistant under Professor Ricky Kwok (at HKU). Furthermore, I have also done some <a href="#projects">cool projects</a>. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
@@ -92,11 +92,11 @@
           <div class="col-md-1"></div>
           <div class="col-md-4">
             <div class="logo-circle">
-              <a href="https://www.hku.hk/" target="_blank"><img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong"></a>
+              <a href="https://drexel.edu" target="_blank"><img class="logo" src="img/drexel.png" alt="Drexel University" style="height: 200px; margin-left: -35px; margin-top: -35px;"></a>
             </div>
-            <h3>The University of Hong Kong</h3>
-            <h5>Aug 17' - Aug 21'</h5>
-            <p>I’m currently pursing my undergraduate studies in computer science here - in the city of Hong Kong. It’s a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
+            <h3>Drexel University</h3>
+            <h5>Sept 17' - May 21'</h5>
+            <p>I’m currently a junior in my undergraduate degree in computer science here - in the city of Philadelphia. Right in the middle of the city, it's a unique experience to be part of such a vibrant community on campus.</p>
           </div>
 
           <div class="col-md-2"></div>
@@ -107,12 +107,12 @@
             </div>
             <h3>Princeton University</h3>
             <h5>Jan 19' - Jul 19'</h5>
-            <p>I was selected as the only student from the Faculty of Engineering at The University of Hong Kong for a semester long exchange at Princeton University. I'll be travelling to New Jersey in the spring of 2019, and pursing courses in computer science.</p>
+            <p>I was selected as the only student from the Faculty of Engineering at The University of Hong Kong for a semester long exchange at Princeton University. I travelled to New Jersey in the spring of 2019, and did advanced courses in computer science. With such a beautiful campus, it was just a beautiful experience!</p>
           </div>
           <div class="col-md-1"></div>
 
           <div class="col-md-1"></div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="logo-circle">
               <a href="https://www.kaist.edu" target="_blank"><img class="logo" src="img/kaist.png" style="margin-left: -11px; margin-top: -10.5px;" alt="KAIST, South Korea"></a>
             </div>
@@ -121,9 +121,16 @@
             <p>I travelled to South Korea to study for a summer program in KAIST, where I did Discrete Mathematics. It was a wonderful experience, and South Korea is a beautiful country with a vividly amazing culture. The most difficult part was to speak Korean to the locals, but apart from that - it was an unforgettable trip.</p>
           </div>
 
-          <div class="col-md-2"></div>
-
           <div class="col-md-4">
+            <div class="logo-circle">
+              <a href="https://www.hku.hk/" target="_blank"><img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong"></a>
+            </div>
+            <h3>The University of Hong Kong</h3>
+            <h5>Sept 17' - Dec 18'</h5>
+            <p>I did the first couple of years of my undergraduate studies in computer science here - in the city of Hong Kong. It was a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
+          </div>
+
+          <div class="col-md-3">
             <div class="logo-circle">
               <a href="https://commonpurpose.org/" target="_blank"><img class="logo" src="img/commonpurpose.jpg" style="margin-left: -8.5px; margin-top: -4px;" alt="Leadership Development Program, Philippines"></a>
             </div>
