--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
           <div class="col-md-5"></div>
           <div class="col-md-2">
             <p style="font-size: 40px; margin-bottom: 0;">
-              <a href="mailto:brahm@connect.hku.hk" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-              <a href="https://twitter.com/brahmnoorsingh" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> </a>
+              <a href="mailto:bchawla@princeton.edu" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/brahmnoorchawla" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> </a>
               <a href="https://www.linkedin.com/in/brahmnoor/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
               <a href="https://github.com/brahmnoor/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
             </p>
@@ -284,7 +284,7 @@
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
-            <p style="padding-top: 10px; border-top: 1px solid #e2e2e2; margin-top: 0; font-size: 18px;">Copyright 2018 © Brahmnoor Singh Chawla</p>
+            <p style="padding-top: 10px; border-top: 1px solid #e2e2e2; margin-top: 0; font-size: 18px;">Copyright 2019 © Brahmnoor Singh Chawla</p>
           </div>
           <div class="col-md-4"></div>
         </div>
