changes to first work ex

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h3>Google</h3>
             <h5>June '20 - Sept '20</h5>
             <h6>Software Engineering Intern - Google Photos</h6>
-            <p>I worked at Google Photos working to bring interesting clips to their flagship N-years ago memories. N-years ago is their flagship reminisces feature that showcases the best pictures from this week, N-years ago. I used Machine Learning APIs to improve the curation for picking the best clips, by choosing the best part of a video from a user's gallery. Worked with C++ and Java, building an end-to-end pipeline, and introducing new algorithms to improve curation.</p>
+            <p>I worked at Google Photos working to bring interesting clips to N-years ago memories. Within Google Photos, N-years ago is the flagship reminisces feature that showcases the best pictures from this week, but in the last few years. I used Machine Learning APIs to introduce filters to pick out the best clips from a longer video. While building this, I worked with C++ and Java, building an end-to-end pipeline, and introducing new algorithms to improve curation.</p>
           </div>
           <div class="col-md-4"></div>
 
